--- a/src/style/sections/ad_minin.less
+++ b/src/style/sections/ad_minin.less
@@ -15,7 +15,7 @@
 }
 .ad_minin__wrap {
 	position: relative;
-	padding: 150px 80px 0 185px;
+	padding: 150px 80px 30px 185px;
 }
 .ad_minin-info {
 	position: relative;
